# radarsim

./: .gitignore  Cargo.toml  README.md  build_website.sh  devenv.nix  devenv.yaml  flake.nix  index.html  radarsim.js  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/shaders/: normal_dist_material.wgsl
src/: camera.rs  chi_squared.rs  common.rs  kalman_scene.rs  main.rs  normal_dist_material.rs  radar_scene.rs  real_scene.rs  tweaks.rs
