[package]
name = "radarsim"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
bevy = "0.18.1"
bevy_egui = "0.39.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
