[package]
name = "radarsim"
version = "0.1.0"
edition = "2024"
publish = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
  # features of the 2d feature
  "2d_bevy_render",
  # "audio",
  "default_app",
  "default_platform",
  "picking",
  "scene",
  # "ui",
] }
bevy_egui = "0.39.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
nalgebra = "0.34.2"
rand = "0.10.1"
rand_distr = "0.6.0"

[target.x86_64-unknown-linux-gnu.dependencies]
bevy_dylib = { version = "0.18.0-rc.2" }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
